# internal/handlers/errors.go
@@ -1,0 +1,5 @@
+package handlers
+
+import "errors"
+
+var errInvalidWebhookURL = errors.New("invalid webhook_url, expected valid http(s) URL")
